src/test/ui/nll/ty-outlives/impl-trait-captures.stderr
warning: not reporting region error due to nll
  --> $DIR/impl-trait-captures.rs:21:5
   |
LL |     x
   |     ^

error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/impl-trait-captures.rs:21:5
   |
LL | fn foo<'a, T>(x: &T) -> impl Foo<'a> {
   |                  -- help: add explicit lifetime `'a/#0` to the type of `x`: `&'a/#0 T`
LL |     x
   |     ^ lifetime `'a/#0` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
